<resources>
    <!-- region VoiceInputDialogFragment -->
    <string name="input_title_listening">Listening…</string>
    <string name="input_subtitle_listening">Say something</string>
    <string name="input_subtitle_suggestions">Say something like:</string>
    <string name="input_title_error">Sorry, we didn\'t quite get that.</string>
    <string name="input_subtitle_error">Try repeating your request.</string>
    <string name="input_hint_error">Try again</string>
    <!-- endregion -->

    <!-- region VoicePermissionDialogFragment -->
    <string name="permission_title">You can use voice search to find products.</string>
    <string name="permission_subtitle">May we access your device’s microphone to enable voice search?</string>
    <string name="permission_button_allow">Allow microphone access</string>
    <string name="permission_button_reject">No</string>

    <!-- region Rationale/Try Again -->
    <string name="permission_rationale">Voice search requires this permission.</string>
    <string name="permission_button_again">Request again?</string>
    <!-- endregion -->

    <!-- region Manual Instructions -->
    <string name="permission_enable_rationale">Permission denied, allow it to use voice search.</string>
    <string name="permission_button_enable">Allow recording</string>
    <string name="permission_enable_instructions">On the next screen, tap Permissions then Microphone.</string>
    <!-- endregion -->

    <!-- endregion -->

    <!-- Not intended to be overridden by user app. -->
    <string name="format_voice_suggestion_html"><![CDATA[&#8226;\t\t\t%s<br/>]]></string>
</resources>
