...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="24dp"
        tools:text="@tools:sample/lorem/random"
        android:textAppearance="?attr/textAppearanceBody1"
        app:layout_constraintBottom_toTopOf="@id/buttonVoice"
        android:layout_height="wrap_content"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonVoice"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/Widget.MaterialComponents.Button"
        app:layout_constraintBottom_toTopOf="@id/buttonPermission"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:text="@string/button_voice"
        android:textAllCaps="false"
        android:textAppearance="?attr/textAppearanceSubtitle2"
        android:textSize="16sp"
...
